--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
 			href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&family=Raleway:wght@400;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+			rel="stylesheet"
+		/>
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
