--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     -->
 		<title>React App</title>
 		<!-- Start Single Page Apps for GitHub Pages -->
-		<!-- <script type="text/javascript">
+		<script type="text/javascript">
 			// Single Page Apps for GitHub Pages
 			// MIT License
 			// https://github.com/rafgraph/spa-github-pages
@@ -80,7 +80,7 @@
 					);
 				}
 			})(window.location);
-		</script> -->
+		</script>
 		<!-- End Single Page Apps for GitHub Pages -->
 	</head>
 
